# sql_shift_ai

./: .hfignore  MODEL_CARD.md  PROJECT.md  README.md  README_HF_SPACE.md  app.py  pyproject.toml  requirements.txt
datasets/: .gitignore  vertica_snowflake_pairs.jsonl
demo/: handlers.py  theme.py
examples/ml_features/: churn_feature_sql.sql
model/: README.md  config.json
morphsql/: __init__.py  cli.py  pipeline.py
morphsql/ai/: __init__.py  agent.py  pipeline.py  risk_model.py
morphsql/assistant/: __init__.py  copilot.py
morphsql/dbt_generator/: __init__.py  decomposer.py
morphsql/eval/: __init__.py  metrics.py  pairs.py
morphsql/intelligence/: __init__.py  lineage_viz.py  rag.py  rationalization.py  runbook.py
morphsql/knowledge/: __init__.py
morphsql/lineage/: __init__.py  builder.py
morphsql/parser/: __init__.py  sql_parser.py
morphsql/report/: __init__.py  html_report.py
morphsql/risk/: __init__.py  scorer.py
morphsql/scanner/: __init__.py  repository.py
morphsql/translator/: __init__.py  engine.py  pandas_codegen.py  pyspark_codegen.py
morphsql/validation/: __init__.py  reconciliation.py
scripts/: check_space.py  deploy_hf.sh  publish_dataset.py  run_local.sh
sqlshift/: __init__.py  cli.py  models.py
sqlshift/ai/: agent.py  pipeline.py  risk_model.py
sqlshift/assistant/: __init__.py  copilot.py
sqlshift/dbt_generator/: decomposer.py
sqlshift/eval/: __init__.py  leaderboard.py  metrics.py  pairs.py
sqlshift/intelligence/: __init__.py  lineage_viz.py  rag.py  rationalization.py  runbook.py
sqlshift/knowledge/: behavior.py
sqlshift/lineage/: builder.py
sqlshift/parser/: sql_parser.py
sqlshift/report/: html_report.py
sqlshift/translator/: engine.py  pandas_codegen.py
tests/: test_morphsql.py  test_sqlshift.py
